--- a/index.html
+++ b/index.html
@@ -8,45 +8,54 @@
 </head>
 
 <body>
+    <header>
+        this is header
+        i don't know why i have created it
+    </header>
+    <main>
+        this is main
+        <!-- <h1>heading tags</h1>    
+        Heading tags shouldn't be used 4 bold or thick text 
+        <h2>H2</h2>     
+        heading tag is used 4 SEO 
+        <h3>H3</h3>
+        <h4>H4</h4>
+        <h5>H5</h5>
+        <h6>H6</h6>     >h7>H7</h7>    <h8>H8</h8>    <h9>H9</h9>    <h10>H10</h10>    useless tags  -->
 
-    <!-- <h1>heading tags</h1>    
-    Heading tags shouldn't be used 4 bold or thick text 
-    <h2>H2</h2>     
-    heading tag is used 4 SEO 
-    <h3>H3</h3>
-    <h4>H4</h4>
-    <h5>H5</h5>
-    <h6>H6</h6>     >h7>H7</h7>    <h8>H8</h8>    <h9>H9</h9>    <h10>H10</h10>    useless tags  -->
+        <q>This is coated in double inverted quatation </q>
+        <br><!-- br tag is used 4 line break -->
+        <p>This is a <abbr title="Paragraph">para</abbr> </p><br>
 
-    <q>This is coated in double inverted quatation </q>
-    <br><!-- br tag is used 4 line break -->
-    <p>This is a <abbr title="Paragraph">para</abbr> </p><br>
+        <a href="https://mail.google.com/mail/u/0/?ogbl#inbox" target="_blank">My gmail account in new tab</a>
+        <hr><!-- hr tag is used to draw horizontal line -->
 
-    <a href="https://mail.google.com/mail/u/0/?ogbl#inbox" target="_blank">My gmail account in new tab</a>
-    <hr><!-- hr tag is used to draw horizontal line -->
+        <pre>THis will show things as it is written in  the code</pre>
 
-    <pre>THis will show things as it is written in  the code</pre>
-
-    <img src="https://imgs.search.brave.com/x5Xwy5vm9F2OGcg8ekBlbEqqtJIvqOsfzXrcRs7KTk4/rs:fit:500:0:0:0/g:ce/aHR0cHM6Ly93d3cu/Ymhha3RpcGhvdG9z/LmNvbS93cC1jb250/ZW50L3VwbG9hZHMv/MjAxOC8wNC9Hb2Qt/U2FyYXN3YXRoaS1Q/aG90b3MuanBn"
-        alt="Goddess Saraswati" width="150" height="150"> <!-- Image tag -->
+        <img src="https://imgs.search.brave.com/x5Xwy5vm9F2OGcg8ekBlbEqqtJIvqOsfzXrcRs7KTk4/rs:fit:500:0:0:0/g:ce/aHR0cHM6Ly93d3cu/Ymhha3RpcGhvdG9z/LmNvbS93cC1jb250/ZW50L3VwbG9hZHMv/MjAxOC8wNC9Hb2Qt/U2FyYXN3YXRoaS1Q/aG90b3MuanBn"
+            alt="Goddess Saraswati" width="150" height="150"> <!-- Image tag -->
 
 
-    <br><strong>This text is bold</strong><br> <!-- strong and b tags are used 4 bold text -->
-    <b>Bold</b>
+        <br><strong>This text is bold</strong><br> <!-- strong and b tags are used 4 bold text -->
+        <b>Bold</b>
 
-    <big>Big</big> <!-- big tag is used 4 big text -->
+        <big>Big</big> <!-- big tag is used 4 big text -->
 
-    <small>Small</small> <!-- Small tag is used 4 small text -->
+        <small>Small</small> <!-- Small tag is used 4 small text -->
 
-    <em>This text is italic</em><br> <!-- em and i 4 italic -->
-    <i>Italic</i><br>
+        <em>This text is italic</em><br> <!-- em and i 4 italic -->
+        <i>Italic</i><br>
 
-    <u>This text is underlined</u><br>
+        <u>This text is underlined</u><br>
 
-    <s>This text is strikethrough</s><br>
+        <s>This text is strikethrough</s><br>
 
-    <p>This is a paragraph of text.</p>
+        <p>This is a paragraph of text.</p>
+    </main>
 
+    <footer>
+        this is footer
+    </footer>
 
 </body>
 
