--- a/index.html
+++ b/index.html
@@ -9,8 +9,7 @@
 
 <body>
     <header>
-        this is header
-        i don't know why i have created it
+        i don't know why i have created header
     </header>
     <main>
         this is main
